# xtensor

./: .appveyor.yml  .clang-format  .dir-locals.el  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  _2home_2runner_2work_2xtensor_2xtensor_2include_2xtensor_2views_2index_mapper_8hpp-example.html  _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  azure-pipelines.yml  classes.html  classstd_1_1tuple__size_3_01xt_1_1const__array_3_01_t_00_01_n_01_4_01_4.html  classstd_1_1tuple__size_3_01xt_1_1fixed__shape_3_01_n_8_8_8_01_4_01_4.html  classstd_1_1tuple__size_3_01xt_1_1sequence__view_3_01_t_00_01_start_00_01_end_01_4_01_4.html  classxt_1_1aligned__array-members.html  classxt_1_1aligned__array.html  classxt_1_1broadcast__error-members.html  classxt_1_1broadcast__error.html  classxt_1_1concatenate__error-members.html  classxt_1_1concatenate__error.html  classxt_1_1extension_1_1xbroadcast__optional-members.html  classxt_1_1extension_1_1xbroadcast__optional.html  classxt_1_1extension_1_1xcontainer__optional__base-members.html  classxt_1_1extension_1_1xcontainer__optional__base.html  classxt_1_1extension_1_1xdynamic__view__optional-members.html  classxt_1_1extension_1_1xdynamic__view__optional.html  classxt_1_1extension_1_1xfunction__optional__base-members.html  classxt_1_1extension_1_1xfunction__optional__base.html  classxt_1_1extension_1_1xfunctor__view__optional-members.html  classxt_1_1extension_1_1xfunctor__view__optional.html  classxt_1_1extension_1_1xgenerator__optional-members.html  classxt_1_1extension_1_1xgenerator__optional.html  classxt_1_1extension_1_1xindex__view__optional-members.html  (+1247 more)
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  unix-build.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmarks.yml  ci.yml  ci_extended.yaml  codspeed.yml  gh-pages.yml  issue-close.yml  linux.yml  osx.yml  sanitizers.yml  static-analysis.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark_adapter.cpp  benchmark_assign.cpp  benchmark_assign.hpp  benchmark_builder.cpp  benchmark_container.cpp  benchmark_container.hpp  benchmark_creation.cpp  benchmark_equal.cpp  benchmark_increment_stepper.cpp  benchmark_lambda_expressions.cpp  benchmark_math.cpp  benchmark_math.hpp  benchmark_numpy.cpp  benchmark_random.cpp  benchmark_reducer.cpp  benchmark_roll.cpp  benchmark_stl.cpp  benchmark_strided_loop.cpp  benchmark_view_access.cpp  benchmark_view_adapt.cpp  benchmark_view_assignment.cpp  benchmark_view_iteration.hpp  benchmark_views.cpp  benchmark_views.hpp  benchmark_xfft.cpp  benchmark_xshape.cpp  benchmark_xshape.hpp  copyGBenchmark.cmake.in  downloadGBenchmark.cmake.in  gbench_test.cpp  main.cpp  upload_benchmark.py
benchmark/comparison/: CMakeLists.txt  blas1_comparison.cpp  comparison_main.cpp
cmake/: FindTBB.cmake  sanitizers.cmake
cmake/modules/: FindBLITZ.cmake
cotire/: cotire.cmake
docs/: Doxyfile  Makefile  environment.yaml  environment.yml  ghp_environment.yml  make.bat  rtd_environment.yml
docs/source/: adaptor.rst  api_reference.rst  basic_usage.rst  bindings.rst  build-options.rst  builder.rst  changelog.rst  closure-semantics.rst  compilers.rst  conf.py  container.rst  container_index.rst  dev-build-options.rst  docindex.rst  exponential_functions.rst  expression.rst  external-structures.rst  file_loading.rst  getting_started.rst  histogram.rst  hyperbolic_functions.rst  index.rst  indices.rst  installation.rst  missing.rst  numpy-differences.rst  numpy.rst  operator.rst  (+22 more)
new_benchmark/: CMakeLists.txt  exp_benchmark.cxx  marray_benchmark.hxx
notebooks/: xtensor.ipynb
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+83 more)
test/: CMakeLists.txt  CMakeLists.txt.in  copyGTest.cmake  copyGTest.cmake.in  doctest_wrapper.hpp  downloadGTest.cmake.in  main.cpp  msan_ignorelist.txt  msan_suppressions.txt  set_compiler_flag.cmake  test-environment.yml  test_common.hpp  test_common_macros.hpp  test_extended_broadcast_view.cpp  test_extended_xhistogram.cpp  test_extended_xmath_average.cpp  test_extended_xmath_interp.cpp  test_extended_xmath_reducers.cpp  test_extended_xsort.cpp  test_invalid_write_size.cpp  test_ndarray.cpp  test_ndarray_base.hpp  test_ndutils.cpp  test_sfinae.cpp  test_strided_assign.cpp  test_utils.cpp  test_utils.hpp  test_xaccumulator.cpp  test_xadapt.cpp  test_xadaptor_semantic.cpp  test_xany.cpp  test_xarray.cpp  test_xarray_adaptor.cpp  test_xarray_base.hpp  test_xarray_semantic.cpp  test_xassign.cpp  test_xaxis_iterator.cpp  test_xaxis_slice_iterator.cpp  test_xbin.cpp  test_xblockwise_reducer.cpp  (+82 more)
test/files/: generate.py  preprocess.py  xio_expected_results.hpp
test/files/cppy_source/: test_extended_broadcast_view.cppy  test_extended_xhistogram.cppy  test_extended_xmath_average.cppy  test_extended_xmath_interp.cppy  test_extended_xmath_reducers.cppy  test_extended_xsort.cppy  test_xstrided_view_extended.cppy
test/files/xio_expected_results/: big_exp.txt  bool_fn.txt  complex_numbers.txt  complex_zero_erasing.txt  custom_formatter_result.txt  cut_4d.txt  cut_both.txt  cut_high.txt  cut_long.txt  float_leading_zero.txt  long_strings.txt  precision.txt  print_options_result.txt  random_nan_inf.txt  random_strings.txt  threed_double.txt  twod_double.txt
test/files/xnpy_files/: bool.npy  bool_fortran.npy  double.be.npy  double.npy  double_fortran.le.npy  double_fortran.npy  int.be.npy  unsignedlong_fortran.le.npy  unsignedlong_fortran.npy
tools/: check_circular.py  report_numpy_benchmarks.py  xtensor.natvis
(+322 files in other folders)
